SERVER-16050: Do not sleep when yielding

Sleeping should not be necessary as ordering is purely determined
by the lock manager