src/mongo/db/query/query_yield.cpp
@@ -33,22 +33,9 @@
 #include "mongo/db/storage/record_fetcher.h"
 
 namespace mongo {
-namespace {
-
-    void yieldOrSleepFor1Microsecond() {
-#ifdef _WIN32
-        SwitchToThread();
-#elif defined(__linux__)
-        pthread_yield();
-#else
-        sleepmicros(1);
-#endif
-    }
-
-}
 
     // static
-    void QueryYield::yieldAllLocks(OperationContext* txn, int micros, RecordFetcher* fetcher) {
+    void QueryYield::yieldAllLocks(OperationContext* txn, RecordFetcher* fetcher) {
         // Things have to happen here in a specific order:
         //   1) Tell the RecordFetcher to do any setup which needs to happen inside locks
         //   2) Release lock mgr locks
@@ -57,9 +44,6 @@ namespace {
         //   5) Reacquire lock mgr locks
 
         Locker* locker = txn->lockState();
-
-        // If we had the read lock, we yield extra hard so that we don't starve writers.
-        bool hadReadLock = locker->hasAnyReadLock();
 
         Locker::LockSnapshot snapshot;
 
@@ -74,36 +58,6 @@ namespace {
 
         // Track the number of yields in CurOp.
         txn->getCurOp()->yielded();
-
-        if (hadReadLock) {
-            // TODO(kal): Is this still relevant?  Probably not?
-            //
-            // Quote: This sleep helps reader threads yield to writer threads.  Without this, the underlying
-            // reader/writer lock implementations are not sufficiently writer-greedy.
-
-#ifdef _WIN32
-            SwitchToThread();
-#else
-            if (0 == micros) {
-                yieldOrSleepFor1Microsecond();
-            }
-            else {
-                sleepmicros(1);
-            }
-#endif
-        }
-        else {
-            if (-1 == micros) {
-                sleepmicros(1);
-                //sleepmicros(Client::recommendedYieldMicros());
-            }
-            else if (0 == micros) {
-                yieldOrSleepFor1Microsecond();
-            }
-            else if (micros > 0) {
-                sleepmicros(micros);
-            }
-        }
 
         if (fetcher) {
             fetcher->fetch();
